--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -1,18 +1,28 @@
-/* Base styles
--------------------------------------------------- */
-
 body {
-  position : fixed;
-  top      : 0;
-  right    : 0;
-  bottom   : 0;
-  left     : 0;  
-}
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: green; }
+  @media only screen and (max-width: 1024px) {
+    body {
+      background-color: yellow; } }
+  @media only screen and (max-width: 520px) {
+    body {
+      background-color: red; } }
 
 #head {
-	position : fixed;
-	top      : 0;
-	right    : 0;
-	left     : 0;
-	border-bottom: 1px solid black;
-}
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  border-bottom: 1px solid black;
+  background-color: pink; }
+  @media only screen and (max-width: 1024px) {
+    #head {
+      height: 50px; } }
+  @media only screen and (max-width: 520px) {
+    #head {
+      height: 30px; } }
