--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -4,7 +4,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: green; }
+  color: #555555; }
   @media only screen and (max-width: 1024px) {
     body {
       background-color: yellow; } }
@@ -18,11 +18,50 @@ body {
   left: 0;
   right: 0;
   height: 100px;
-  border-bottom: 1px solid black;
-  background-color: pink; }
+  border-bottom: 1px solid black; }
   @media only screen and (max-width: 1024px) {
     #head {
       height: 50px; } }
   @media only screen and (max-width: 520px) {
     #head {
       height: 30px; } }
+
+#menu {
+  display: block;
+  float: right;
+  width: 300px;
+  list-style: none;
+  font-family: Ratio, sans-serif;
+  font-size: 1em;
+  line-height: 1.8; }
+
+#menu li {
+  float: right;
+  cursor: pointer;
+  margin-top: 78px;
+  margin-right: 8px; }
+
+#menu li.selected {
+  border-bottom: 1px solid red; }
+
+#label {
+  position: absolute;
+  top: 20px;
+  left: 105px;
+  color: black;
+  font-family: "Arizonia", cursive;
+  font-size: 66px; }
+
+#logo {
+  width: 80px;
+  height: 80px;
+  margin-top: 10px;
+  margin-left: 10px;
+  border-radius: 10px; }
+
+#content {
+  font-family: Ratio, sans-serif;
+  font-size: 1em;
+  line-height: 1.8;
+  text-rendering: optimizeLegibility;
+  -webkit-font-feature-settings: "liga", "dlig"; }
