--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -64,4 +64,5 @@ body {
   font-size: 1em;
   line-height: 1.8;
   text-rendering: optimizeLegibility;
-  -webkit-font-feature-settings: "liga", "dlig"; }
+  -webkit-font-feature-settings: "liga", "dlig";
+  margin-top: 120px; }
