--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -66,8 +66,10 @@ body
     font-family  : Ratio, sans-serif
     font-size    : 1em
     line-height  : 1.8
+    margin-top   : 120px
+    margin-left  : 20%
+    margin-right : 20%
     text-rendering: optimizeLegibility
     -webkit-font-feature-settings: 'liga', 'dlig'
-    margin-top : 120px
 
 
