More responsive design stuff and other UI fixes

--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -44,6 +44,9 @@ body
     @media #{$ipad-portrait}
         margin-top : 28px
 
+#menu li a
+    text-decoration: none
+
 #menu li.selected
     background-color : white
 
@@ -94,5 +97,8 @@ body
         line-height  : 1.7
         margin-left  : 5%
         margin-right : 5%
+
+#content a
+    text-decoration: underline!important
 
 
