--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -35,6 +35,9 @@ body {
     #menu li {
       margin-top: 28px; } }
 
+#menu li a {
+  text-decoration: none; }
+
 #menu li.selected {
   background-color: white; }
 
@@ -90,3 +93,6 @@ body {
       line-height: 1.7;
       margin-left: 5%;
       margin-right: 5%; } }
+
+#content a {
+  text-decoration: underline !important; }
