--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -1,3 +1,46 @@
+a {
+  color: #555555; }
+
+a:hover {
+  color: #555555;
+  cursor: pointer; }
+
+h1 {
+  font-weight: normal; }
+
+blockquote {
+  padding: 13px 13px 21px 15px;
+  margin-bottom: 3px;
+  font-style: italic; }
+
+blockquote:before {
+  content: "\201C";
+  float: left;
+  font-size: 40px;
+  margin-left: -10px;
+  margin-top: -20px;
+  font-family: georgia, serif;
+  color: #eeeeee; }
+  @media only screen and (max-width: 1024px) {
+    blockquote:before {
+      font-size: 30px; } }
+  @media only screen and (max-width: 520px) {
+    blockquote:before {
+      font-size: 20px; } }
+
+blockquote p {
+  font-weight: 300;
+  line-height: 18px;
+  margin-bottom: 0;
+  margin-top: 15px;
+  font-style: italic; }
+  @media only screen and (max-width: 1024px) {
+    blockquote p {
+      margin-top: 5px; } }
+  @media only screen and (max-width: 520px) {
+    blockquote p {
+      margin-top: -2px; } }
+
 body {
   position: fixed;
   top: 0;
