--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -5,6 +5,44 @@ $ipad-landscape : "only screen and (min-device-width : 768px) and (max-device-wi
 //$ipad-portrait  : "only screen and (min-device-width : 768px) and (max-device-width : 1024px)"
 $ipad-portrait  : "only screen and (max-width : 1024px)"
 
+a
+    color : #555
+a:hover 
+    color  : #555
+    cursor : pointer
+h1
+    font-weight : normal
+
+blockquote
+    padding : 13px 13px 21px 15px
+    margin-bottom : 3px
+    font-family :georgia,serif
+    font-style : italic
+
+blockquote:before 
+    content : "\201C"
+    float: left
+    font-size : 40px
+    margin-left : -10px
+    margin-top : -20px
+    font-family : georgia,serif
+    color : #eee
+    @media #{$ipad-portrait}
+        font-size  : 30px
+    @media #{$smartphone-portrait}
+        font-size : 20px 
+
+blockquote p
+    font-weight : 300
+    line-height : 18px
+    margin-bottom : 0
+    margin-top : 15px
+    font-style : italic
+    @media #{$ipad-portrait}
+        margin-top : 5px
+    @media #{$smartphone-portrait}
+        margin-top : -2px
+
 body
     position : fixed
     top      : 0
