--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -42,11 +42,8 @@ blockquote p {
       margin-top: -2px; } }
 
 body {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   color: #555555; }
 
 #head {
@@ -55,7 +52,8 @@ body {
   left: 0;
   right: 0;
   height: 100px;
-  border-bottom: 1px solid black; }
+  border-bottom: 1px solid black;
+  background-color: white; }
   @media only screen and (max-width: 1024px) {
     #head {
       height: 50px; } }
@@ -68,6 +66,10 @@ body {
   font-family: Ratio, sans-serif;
   font-size: 1em;
   line-height: 1.8; }
+  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    #menu {
+      font-size: 0.9em;
+      line-height: 2; } }
 
 #menu li {
   float: right;
@@ -123,13 +125,15 @@ body {
   margin-top: 120px;
   margin-left: 20%;
   margin-right: 20%;
+  margin-bottom: 140px;
   text-rendering: optimizeLegibility;
   -webkit-font-feature-settings: "liga", "dlig"; }
   @media only screen and (max-width: 1024px) {
     #content {
       margin-top: 60px;
       margin-left: 10%;
-      margin-right: 10%; } }
+      margin-right: 10%;
+      margin-bottom: 95px; } }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     #content {
       font-size: 0.9em;
@@ -139,3 +143,18 @@ body {
 
 #content a {
   text-decoration: underline !important; }
+
+#footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 120px;
+  background-color: white;
+  border-top: 1px solid black; }
+  @media only screen and (max-width: 1024px) {
+    #footer {
+      height: 80px; } }
+  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    #footer {
+      display: none; } }
