--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -1,6 +1,5 @@
 $smartphone : "only screen and (min-device-width : 320px) and (max-device-width : 480px)"
-$smartphone-landscape : "only screen and (min-width : 521px)"
-$smartphone-portrait  : "only screen and (max-width : 520px)"
+// $smartphone  : "only screen and (max-width : 520px)"
 $ipad-landscape : "only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape)"
 //$ipad-portrait  : "only screen and (min-device-width : 768px) and (max-device-width : 1024px)"
 $ipad-portrait  : "only screen and (max-width : 1024px)"
@@ -44,12 +43,9 @@ blockquote p
         margin-top : -2px
 
 body
-    position : fixed
-    top      : 0
-    bottom   : 0
-    left     : 0
-    right    : 0
-    color    : #555
+    width  : 100%
+    height : 100%
+    color  : #555
     // @media #{$ipad-portrait}
     //     background-color: yellow
     // @media #{$smartphone-portrait}
@@ -62,6 +58,7 @@ body
     right    : 0
     height   : 100px
     border-bottom : 1px solid black
+    background-color : white
     @media #{$ipad-portrait}
         height : 50px
 
@@ -73,6 +70,9 @@ body
     font-family  : Ratio, sans-serif
     font-size    : 1em
     line-height  : 1.8
+    @media #{$smartphone}
+        font-size    : 0.9em
+        line-height  : 2    
 
 #menu li
     float   : right
@@ -118,18 +118,20 @@ body
         margin-left: 10px
 
 #content
-    font-family  : Ratio, sans-serif
-    font-size    : 1em
-    line-height  : 1.8
-    margin-top   : 120px
-    margin-left  : 20%
-    margin-right : 20%
+    font-family   : Ratio, sans-serif
+    font-size     : 1em
+    line-height   : 1.8
+    margin-top    : 120px
+    margin-left   : 20%
+    margin-right  : 20%
+    margin-bottom : 140px
     text-rendering: optimizeLegibility
     -webkit-font-feature-settings: 'liga', 'dlig'
     @media #{$ipad-portrait}
-        margin-top : 60px
-        margin-left  : 10%
-        margin-right : 10%
+        margin-top    : 60px
+        margin-left   : 10%
+        margin-right  : 10%
+        margin-bottom : 95px
     @media #{$smartphone}
         font-size    : 0.9em
         line-height  : 1.7
@@ -139,4 +141,16 @@ body
 #content a
     text-decoration: underline!important
 
+#footer
+    position : fixed
+    bottom : 0
+    left : 0
+    right : 0
+    height : 120px
+    background-color : white
+    border-top : 1px solid black
+    @media #{$ipad-portrait}
+        height : 80px
+    @media #{$smartphone}
+        display : none
 
