--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -24,7 +24,7 @@ blockquote:before {
   @media only screen and (max-width: 1024px) {
     blockquote:before {
       font-size: 30px; } }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  @media only screen and (max-width: 520px) {
     blockquote:before {
       font-size: 20px; } }
 
@@ -37,7 +37,7 @@ blockquote p {
   @media only screen and (max-width: 1024px) {
     blockquote p {
       margin-top: 5px; } }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  @media only screen and (max-width: 520px) {
     blockquote p {
       margin-top: -2px; } }
 
@@ -66,10 +66,6 @@ body {
   font-family: Ratio, sans-serif;
   font-size: 1em;
   line-height: 1.8; }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-    #menu {
-      font-size: 0.9em;
-      line-height: 2; } }
 
 #menu li {
   float: right;
@@ -98,7 +94,7 @@ body {
       top: 9px;
       left: 59px;
       font-size: 34px; } }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  @media only screen and (max-width: 520px) {
     #label {
       display: none; } }
 
@@ -134,7 +130,7 @@ body {
       margin-left: 10%;
       margin-right: 10%;
       margin-bottom: 95px; } }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  @media only screen and (max-width: 520px) {
     #content {
       font-size: 0.9em;
       line-height: 1.7;
@@ -155,6 +151,6 @@ body {
   @media only screen and (max-width: 1024px) {
     #footer {
       height: 80px; } }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  @media only screen and (max-width: 520px) {
     #footer {
       display: none; } }
