--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -1,8 +1,8 @@
-$smartphone : "only screen and (min-device-width : 320px) and (max-device-width : 480px)"
+$smartphone : "only screen and (max-width : 520px)"
 // $smartphone  : "only screen and (max-width : 520px)"
-$ipad-landscape : "only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape)"
+// $ipad-landscape : "only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape)"
 //$ipad-portrait  : "only screen and (min-device-width : 768px) and (max-device-width : 1024px)"
-$ipad-portrait  : "only screen and (max-width : 1024px)"
+$tablet : "only screen and (max-width : 1024px)"
 
 a
     color : #555
@@ -26,7 +26,7 @@ blockquote:before
     margin-top : -20px
     font-family : georgia,serif
     color : #eee
-    @media #{$ipad-portrait}
+    @media #{$tablet}
         font-size  : 30px
     @media #{$smartphone}
         font-size : 20px 
@@ -37,7 +37,7 @@ blockquote p
     margin-bottom : 0
     margin-top : 15px
     font-style : italic
-    @media #{$ipad-portrait}
+    @media #{$tablet}
         margin-top : 5px
     @media #{$smartphone}
         margin-top : -2px
@@ -46,7 +46,7 @@ body
     width  : 100%
     height : 100%
     color  : #555
-    // @media #{$ipad-portrait}
+    // @media #{$tablet}
     //     background-color: yellow
     // @media #{$smartphone-portrait}
     //     background-color: red
@@ -59,7 +59,7 @@ body
     height   : 100px
     border-bottom : 1px solid black
     background-color : white
-    @media #{$ipad-portrait}
+    @media #{$tablet}
         height : 50px
 
 #menu
@@ -70,16 +70,16 @@ body
     font-family  : Ratio, sans-serif
     font-size    : 1em
     line-height  : 1.8
-    @media #{$smartphone}
-        font-size    : 0.9em
-        line-height  : 2    
+    // @media #{$smartphone}
+    //     font-size    : 0.9em
+    //     line-height  : 2    
 
 #menu li
     float   : right
     cursor  : pointer
     margin-top   : 78px
     margin-right : 8px
-    @media #{$ipad-portrait}
+    @media #{$tablet}
         margin-top : 28px
 
 #menu li a
@@ -95,7 +95,7 @@ body
     color     : black
     font-size : 66px
     font-family : 'Bilbo Swash Caps', cursive
-    @media #{$ipad-portrait}
+    @media #{$tablet}
         top : 9px
         left : 59px
         font-size : 34px
@@ -111,7 +111,7 @@ body
     -webkit-box-shadow: 0px 0px 6px rgba(50,50,50,1)
     -moz-box-shadow: 0px 0px 6px rgba(50,50,50,1)
     box-shadow: 0px 0px 6px rgba(50,50,50,1)
-    @media #{$ipad-portrait}
+    @media #{$tablet}
         width: 40px
         height: 40px
         margin-top: 6px
@@ -127,7 +127,7 @@ body
     margin-bottom : 140px
     text-rendering: optimizeLegibility
     -webkit-font-feature-settings: 'liga', 'dlig'
-    @media #{$ipad-portrait}
+    @media #{$tablet}
         margin-top    : 60px
         margin-left   : 10%
         margin-right  : 10%
@@ -149,7 +149,7 @@ body
     height : 120px
     background-color : white
     border-top : 1px solid black
-    @media #{$ipad-portrait}
+    @media #{$tablet}
         height : 80px
     @media #{$smartphone}
         display : none
