--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -47,10 +47,8 @@ body {
   color: #555555; }
 
 #head {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   height: 100px;
   border-bottom: 1px solid black;
   background-color: white; }
@@ -118,20 +116,25 @@ body {
   font-family: Ratio, sans-serif;
   font-size: 1em;
   line-height: 1.8;
-  margin-top: 120px;
+  min-height: 640px;
+  margin-top: 14px;
   margin-left: 20%;
   margin-right: 20%;
-  margin-bottom: 140px;
+  margin-bottom: -100px;
+  padding-bottom: 20px;
   text-rendering: optimizeLegibility;
   -webkit-font-feature-settings: "liga", "dlig"; }
   @media only screen and (max-width: 1024px) {
     #content {
-      margin-top: 60px;
+      min-height: 568px;
+      margin-top: 10px;
       margin-left: 10%;
       margin-right: 10%;
-      margin-bottom: 95px; } }
+      margin-bottom: -50px; } }
   @media only screen and (max-width: 520px) {
     #content {
+      min-height: 0;
+      margin-top: 8px;
       font-size: 0.9em;
       line-height: 1.7;
       margin-left: 5%;
@@ -141,16 +144,15 @@ body {
   text-decoration: underline !important; }
 
 #footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 120px;
+  width: 100%;
   background-color: white;
   border-top: 1px solid black; }
+
+#footer, .push {
+  height: 100px; }
   @media only screen and (max-width: 1024px) {
-    #footer {
-      height: 80px; } }
+    #footer, .push {
+      height: 50px; } }
   @media only screen and (max-width: 520px) {
-    #footer {
+    #footer, .push {
       display: none; } }
