Updated software links

--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -11,6 +11,8 @@ a:hover
     cursor : pointer
 h1
     font-weight : normal
+h1 a
+    text-decoration : none!important
 
 blockquote
     padding : 13px 13px 21px 15px
@@ -140,9 +142,6 @@ body
         line-height  : 1.7
         margin-left  : 5%
         margin-right : 5%
-
-#content a
-    text-decoration: underline!important
 
 #footer
     width  : 100%
