--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -1,4 +1,4 @@
-$smartphone : "only screen and (max-width : 520px)"
+$smartphone : "only screen and (max-width : 560px)"
 // $smartphone  : "only screen and (max-width : 520px)"
 // $ipad-landscape : "only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape)"
 //$ipad-portrait  : "only screen and (min-device-width : 768px) and (max-device-width : 1024px)"
@@ -65,7 +65,7 @@ body
 #menu
     display : block
     float   : right
-    width   : 212px
+    // width   : 212px
     list-style : none
     font-family  : Ratio, sans-serif
     font-size    : 1em
@@ -77,10 +77,11 @@ body
 #menu li
     float   : right
     cursor  : pointer
-    margin-top   : 78px
-    margin-right : 8px
+    margin-top   : 71px
+    margin-right : 10px
+    font-size : 19px
     @media #{$tablet}
-        margin-top : 28px
+        margin-top : 22px
 
 #menu li a
     text-decoration: none
