--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -64,21 +64,27 @@ body {
   float: right;
   list-style: none;
   font-family: Ratio, sans-serif;
-  font-size: 1em;
-  line-height: 1.8; }
+  font-size: 19px;
+  line-height: 1.8em; }
+  @media only screen and (max-width: 560px) {
+    #menu {
+      font-size: 17px;
+      line-height: 2.2em; } }
 
 #menu li {
   float: right;
   cursor: pointer;
   margin-top: 71px;
-  margin-right: 10px;
-  font-size: 19px; }
+  margin-right: 5px; }
   @media only screen and (max-width: 1024px) {
     #menu li {
       margin-top: 22px; } }
 
 #menu li a {
   text-decoration: none; }
+
+#menu li.separator {
+  color: #f2853f; }
 
 #menu li.selected {
   background-color: white; }
