Working on load indicator

--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -59,6 +59,26 @@ body {
     #head {
       height: 50px; } }
 
+#head .nav_selector {
+  position: absolute;
+  color: black;
+  top: 91px;
+  display: list-item;
+  list-style-position: inside;
+  -webkit-transition: left 0.45s ease-in-out, color 0.25s ease-in-out;
+  -moz-transition: left 0.45s ease-in-out, color 0.25s ease-in-out;
+  -o-transition: left 0.45s ease-in-out, color 0.25s ease-in-out;
+  transition: left 0.45s ease-in-out, color 0.25s ease-in-out; }
+  @media only screen and (max-width: 1024px) {
+    #head .nav_selector {
+      top: 41px; } }
+  @media only screen and (max-width: 560px) {
+    #head .nav_selector {
+      top: 41px; } }
+
+#head .nav_selector.loading {
+  color: #f06d19; }
+
 #menu {
   display: block;
   float: right;
@@ -85,9 +105,6 @@ body {
 
 #menu li.separator {
   color: #f2853f; }
-
-#menu li.selected {
-  background-color: white; }
 
 #label {
   position: absolute;
