--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -130,6 +130,7 @@ body
     margin-top : 10px
     margin-left : 10px
     border-radius : 10px
+    display : inline
     -webkit-box-shadow: 0px 0px 6px rgba(50,50,50,1)
     -moz-box-shadow: 0px 0px 6px rgba(50,50,50,1)
     box-shadow: 0px 0px 6px rgba(50,50,50,1)
