Added enjoy footer

--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -169,7 +169,7 @@ body
 #footer
     width  : 100%
     background-color : white
-    border-top : 1px solid black
+    text-align : center
 
 #footer, .push
     height : 100px
