--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -170,7 +170,7 @@ body {
 #footer {
   width: 100%;
   background-color: white;
-  border-top: 1px solid black; }
+  text-align: center; }
 
 #footer, .push {
   height: 100px; }
