--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -63,13 +63,31 @@ body {
   font-family: "museo-sans", sans-serif; }
 
 #head {
+  position: relative;
   width: 100%;
-  height: 100%;
   height: 100px;
   border-bottom: 1px solid black;
-  background-color: white; }
+  z-index: 2; }
   @media only screen and (max-width: 1024px) {
     #head {
+      height: 50px; } }
+
+#head:after {
+  content: "";
+  opacity: 0.5;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  position: absolute;
+  z-index: 0;
+  background: url("../img/chemex_background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  @media only screen and (max-width: 1024px) {
+    #head:after {
       height: 50px; } }
 
 #head .nav_selector {
@@ -93,6 +111,8 @@ body {
   color: #f06d19; }
 
 #menu {
+  position: relative;
+  z-index: 2;
   display: block;
   float: right;
   list-style: none;
@@ -119,10 +139,11 @@ body {
 #label {
   position: absolute;
   top: 20px;
-  left: 105px;
+  left: 107px;
   color: #333333;
+  z-index: 2;
   font-size: 66px;
-  font-family: "Bilbo Swash Caps", cursive; }
+  display: none; }
   @media only screen and (max-width: 1024px) {
     #label {
       top: 9px;
@@ -133,6 +154,10 @@ body {
       display: none; } }
 
 #logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
   width: 80px;
   height: 80px;
   margin-top: 10px;
