--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -65,17 +65,30 @@ body
     height : 100%
     color  : $text-color
     font-family    : "museo-sans",sans-serif
-    // @media #{$tablet}
-    //     background-color: yellow
-    // @media #{$smartphone-portrait}
-    //     background-color: red
 
 #head
+    position : relative
     width  : 100%
-    height : 100%
     height : 100px
     border-bottom : 1px solid black
-    background-color : white
+    z-index : 2
+    @media #{$tablet}
+        height : 50px
+
+#head:after
+    content: ""
+    opacity: 0.5
+    top : 0
+    left : 0
+    right : 0
+    height : 100px
+    position: absolute
+    z-index: 0
+    background: url('../img/chemex_background.jpg') no-repeat center center fixed
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-background-size: cover
+    background-size: cover
     @media #{$tablet}
         height : 50px
 
@@ -98,10 +111,12 @@ body
     color : $separator-color
 
 #menu
-    display : block
-    float   : right
+    position   : relative
+    z-index    : 2
+    display    : block
+    float      : right
     list-style : none
-    font-size    : 25px
+    font-size  : 25px
     @media #{$smartphone}
         font-size    : 17px
 
@@ -118,17 +133,16 @@ body
 
 #menu li.separator
     color  : lighten($separator-color, 8%)
-    
-#menu li.selected
-    // background-color : white
 
 #label
     position  : absolute
     top       : 20px
-    left      : 105px
+    left      : 107px
     color     : $text-color
+    z-index   : 2
     font-size : 66px
-    font-family : 'Bilbo Swash Caps', cursive
+    display : none
+    // font-family : 'Bilbo Swash Caps', cursive
     @media #{$tablet}
         top : 9px
         left : 59px
@@ -137,8 +151,12 @@ body
         display : none
 
 #logo
-    width  : 80px
-    height : 80px
+    position : absolute
+    top  : 0
+    left : 0
+    z-index : 2
+    width   : 80px
+    height  : 80px
     margin-top : 10px
     margin-left : 10px
     border-radius : 10px
@@ -189,3 +207,6 @@ body
         height : 50px
     @media #{$smartphone}
         display : none
+
+
+
