--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -6,11 +6,17 @@ h1 {
 
 p {
   margin: 5px 0 45px 0; }
+  @media only screen and (max-width: 640px) {
+    p {
+      margin: -1px 0 25px 0; } }
 
 pre {
   margin: 45px 0 45px 0;
   width: 100%;
   overflow: scroll; }
+  @media only screen and (max-width: 640px) {
+    pre {
+      margin: 25px 0 25px 0; } }
 
 a {
   color: #333333; }
@@ -35,15 +41,16 @@ blockquote:before {
   float: left;
   font-size: 40px;
   margin-left: -10px;
-  margin-top: -1px;
+  margin-top: -8px;
   font-family: georgia, serif;
   color: #eeeeee; }
   @media only screen and (max-width: 1024px) {
     blockquote:before {
-      font-size: 30px; } }
+      margin-top: -15px; } }
   @media only screen and (max-width: 640px) {
     blockquote:before {
-      font-size: 20px; } }
+      font-size: 25px;
+      margin-top: -25px; } }
 
 blockquote p {
   font-weight: 300;
@@ -205,7 +212,7 @@ body {
     #content {
       min-height: 0;
       margin-top: 8px;
-      font-size: 0.9em;
+      font-size: 14px;
       line-height: 1.7;
       margin-left: 5%;
       margin-right: 5%; } }
