--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -1,14 +1,35 @@
 h1 {
-  margin: 25px 0px 25px 0px;
+  margin: 45px 0px 25px 0px;
   font-family: "museo-slab", Georiga, serif;
   line-height: 1.6;
-  border-bottom: 1px solid #cccccc; }
+  border-bottom: 1px solid #cccccc;
+  font-weight: normal;
+  padding-right: 20%; }
+  @media only screen and (max-width: 640px) {
+    h1 {
+      margin: 30px 0px 20px 0px;
+      line-height: 1.4; } }
+
+h1 a {
+  text-decoration: none !important; }
+
+h2 {
+  margin-top: 45px; }
+  @media only screen and (max-width: 640px) {
+    h2 {
+      margin-top: 25px; } }
+
+h3 {
+  margin-top: 45px; }
+  @media only screen and (max-width: 640px) {
+    h3 {
+      margin-top: 25px; } }
 
 p {
-  margin: 5px 0 45px 0; }
+  margin: 5px 0 25px 0; }
   @media only screen and (max-width: 640px) {
     p {
-      margin: -1px 0 25px 0; } }
+      margin: -1px 0 15px 0; } }
 
 pre {
   margin: 45px 0 45px 0;
@@ -24,12 +45,6 @@ a {
 a:hover {
   color: #333333;
   cursor: pointer; }
-
-h1 {
-  font-weight: normal; }
-
-h1 a {
-  text-decoration: none !important; }
 
 blockquote {
   padding: 30px 13px 45px 15px;
@@ -230,3 +245,12 @@ body {
   @media only screen and (max-width: 640px) {
     #footer, .push {
       display: none; } }
+
+.date {
+  margin-top: -51px;
+  font-size: 85%;
+  color: #cccccc;
+  float: right; }
+  @media only screen and (max-width: 640px) {
+    .date {
+      margin-top: -38px; } }
