--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -20,18 +20,24 @@ h1
     @media #{$smartphone}
         margin : 30px 0px 20px 0px
         line-height : 1.4
-h1 a
-    text-decoration : none!important
+    a
+        text-decoration : none!important
 
 h2
     margin-top : 45px
+    margin-bottom : 10px
     @media #{$smartphone}
         margin-top : 25px
 
 h3
     margin-top : 45px
+    margin-bottom : 10px
     @media #{$smartphone}
         margin-top : 25px
+
+h4
+    margin-top : 10px
+    margin-bottom : 10px
 
 p
     margin : 5px 0 25px 0
@@ -40,6 +46,7 @@ p
 
 pre
     border : 1px solid #ccc
+    font-size : 0.9em
     border-radius : 5px
     padding : 20px
     margin : 45px 0 45px 0
@@ -208,8 +215,8 @@ body
 
 #content
     color          : $text-color
-    font-size      : 20px
-    line-height    : 32px
+    font-size      : 18px
+    line-height    : 28px
     min-height     : 640px
     margin-top     : 14px
     margin-left    : 18%
