--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -218,6 +218,32 @@ body {
       margin-top: 6px;
       margin-left: 10px; } }
 
+#social {
+  position: absolute;
+  top: 125px;
+  right: 10px;
+  font-size: 2.5em;
+  opacity: 0; }
+  @media only screen and (max-width: 1024px) {
+    #social {
+      top: 70px;
+      right: 8px;
+      font-size: 2em; } }
+  @media only screen and (max-width: 640px) {
+    #social {
+      font-size: 1.7em; } }
+  #social.shown {
+    opacity: 1; }
+  #social:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  #social div {
+    float: left;
+    margin-right: 20px; }
+  #social a {
+    text-decoration: none; }
+
 #content {
   color: #333333;
   font-size: 18px;
