--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -226,11 +226,12 @@ body {
   opacity: 0; }
   @media only screen and (max-width: 1024px) {
     #social {
-      top: 70px;
+      top: 80px;
       right: 20px;
       font-size: 2em; } }
   @media only screen and (max-width: 640px) {
     #social {
+      top: 70px;
       right: 8px;
       font-size: 1.7em; } }
   #social.shown {
@@ -242,6 +243,19 @@ body {
   #social div {
     float: left;
     margin-right: 20px; }
+    #social div.twitter {
+      -webkit-animation-delay: 0.2s;
+      -moz-animation-delay: 0.2s;
+      -ms-animation-delay: 0.2s;
+      -o-animation-delay: 0.2s;
+      animation-delay: 0.2s; }
+    #social div.itunes {
+      margin-left: -6px;
+      -webkit-animation-delay: 0.4s;
+      -moz-animation-delay: 0.4s;
+      -ms-animation-delay: 0.4s;
+      -o-animation-delay: 0.4s;
+      animation-delay: 0.4s; }
   #social a {
     text-decoration: none; }
 
