--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -220,10 +220,11 @@ body
     font-size : 2.5em
     opacity   : 0
     @media #{$tablet}
-        top   : 70px
+        top   : 80px
         right : 20px
         font-size : 2em
     @media #{$smartphone}
+        top   : 70px
         right : 8px
         font-size : 1.7em
 
@@ -238,6 +239,21 @@ body
     div
         float : left
         margin-right : 20px
+
+        &.twitter
+            -webkit-animation-delay : 0.2s
+            -moz-animation-delay    : 0.2s
+            -ms-animation-delay     : 0.2s
+            -o-animation-delay      : 0.2s
+            animation-delay         : 0.2s
+
+        &.itunes
+            margin-left : -6px
+            -webkit-animation-delay : 0.4s
+            -moz-animation-delay    : 0.4s
+            -ms-animation-delay     : 0.4s
+            -o-animation-delay      : 0.4s
+            animation-delay         : 0.4s
 
     a
         text-decoration: none
