--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -213,7 +213,7 @@ body
         margin-top: 6px
         margin-left: 10px
 
-#social
+#social, #feed
     position  : absolute
     top       : 125px
     right     : 10px
