--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -50,7 +50,7 @@ pre
     border-radius : 5px
     padding : 20px
     margin : 45px 0 45px 0
-    width  : 97%
+    width  : 96%
     overflow : scroll
     @media #{$smartphone}
         margin : 25px 0 25px 0
@@ -268,7 +268,8 @@ body
     margin-right   : 18%
     margin-bottom  : -100px
     padding-bottom : 20px
-    text-rendering: optimizeLegibility
+    overflow-x     : hidden
+    text-rendering : optimizeLegibility
     -webkit-font-feature-settings: 'liga', 'dlig'
     @media #{$tablet}
         font-size     : 18px
