--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -220,6 +220,7 @@ body {
 
 #social, #feed {
   position: absolute;
+  display: none;
   top: 125px;
   right: 10px;
   font-size: 2.5em;
@@ -235,7 +236,8 @@ body {
       right: 8px;
       font-size: 1.7em; } }
   #social.shown, #feed.shown {
-    opacity: 1; }
+    opacity: 1;
+    display: block; }
   #social:after, #feed:after {
     content: " ";
     display: block;
