--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -215,6 +215,7 @@ body
 
 #social, #feed
     position  : absolute
+    display   : none
     top       : 125px
     right     : 10px
     font-size : 2.5em
@@ -230,6 +231,7 @@ body
 
     &.shown
         opacity : 1
+        display : block
 
     &:after
         content : " "
