--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -271,6 +271,8 @@ body
     margin-bottom  : -100px
     padding-bottom : 20px
     overflow-x     : hidden
+    max-width      : 800px
+    margin         : auto
     text-rendering : optimizeLegibility
     -webkit-font-feature-settings: 'liga', 'dlig'
     @media #{$tablet}
