Tried making an index with gymb, got frystrated with the whole thing

--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -290,6 +290,9 @@ body
         margin-left  : 5%
         margin-right : 5%
 
+.preview
+    background-color: pink
+
 #footer
     width  : 100%
     background-color : white
