--- a/css/asbjornenge.css
+++ b/css/asbjornenge.css
@@ -295,6 +295,10 @@ body {
   #content .previews {
     margin-top: 40px;
     margin-bottom: 40px; }
+    @media only screen and (max-width: 640px) {
+      #content .previews {
+        margin-top: 30px;
+        margin-bottom: 0px; } }
     #content .previews .preview {
       padding: 20px;
       height: 100px;
@@ -307,6 +311,7 @@ body {
         float: left;
         height: 100px;
         width: 100px;
+        cursor: pointer;
         border-radius: 4px;
         background-size: cover;
         -moz-box-shadow: inset 0 0 8px #6b6b6b;
@@ -321,7 +326,8 @@ body {
       #content .previews .preview h3 {
         padding: 0;
         margin: 0;
-        margin-left: 120px; }
+        margin-left: 120px;
+        cursor: pointer; }
         @media only screen and (max-width: 640px) {
           #content .previews .preview h3 {
             margin-left: 75px; } }
