--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -293,6 +293,9 @@ body
     .previews
         margin-top    : 40px
         margin-bottom : 40px
+        @media #{$smartphone}
+            margin-top : 30px
+            margin-bottom: 0px
 
         .preview
             padding          : 20px
@@ -303,14 +306,15 @@ body
                 position : relative
 
             .previewImageBox
-                float: left
-                height : 100px
-                width  : 100px
-                border-radius : 4px
-                background-size: cover
-                -moz-box-shadow:    inset 0 0 8px darken($text-border-color, 38%)
-                -webkit-box-shadow: inset 0 0 8px darken($text-border-color, 38%)
-                box-shadow:         inset 0 0 8px darken($text-border-color, 38%)
+                float              : left
+                height             : 100px
+                width              : 100px
+                cursor             : pointer 
+                border-radius      : 4px
+                background-size    : cover
+                -moz-box-shadow    : inset 0 0 8px darken($text-border-color, 38%)
+                -webkit-box-shadow : inset 0 0 8px darken($text-border-color, 38%)
+                box-shadow         : inset 0 0 8px darken($text-border-color, 38%)
                 @media #{$smartphone}
                     height : 60px
                     width  : 60px
@@ -322,6 +326,7 @@ body
                 padding     : 0
                 margin      : 0
                 margin-left : 120px
+                cursor      : pointer
                 @media #{$smartphone}
                     margin-left : 75px
 
