--- a/css/asbjornenge.sass
+++ b/css/asbjornenge.sass
@@ -305,6 +305,9 @@ body
                 height : 80px
                 position : relative
 
+            &:last-child
+                border-bottom : none
+
             .previewImageBox
                 float              : left
                 height             : 100px
